k8s/overlays/prd/database.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  template:
    spec:
      containers:
        - name: pg
