k8s/overlays/prd/storage.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-deployment
spec:
  template:
    spec:
      containers:
        - name: minio
