k8s/overlays/prd/storage.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ingress
spec:
  rules:
    - host: lt.eurac.edu
      http:
        paths:
          - # NOTE: signatures are broken, but we use only public buckets anyways; I also can't be bothered to fix this on nginx side
            path: /oetzit/storage(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  name: api
          - # NOTE: UX works only with trailing slash and I can't be bothered to fix this on nginx side
            path: /oetzit/storage/console(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  name: console
  tls:
    - hosts:
        - lt.eurac.edu
      secretName: lt-prd-tls
