k8s/overlays/prd/webserver.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/oetzit/backend)$ $1/ permanent;
spec:
  rules:
    - host: lt.eurac.edu
      http:
        paths:
          - path: /oetzit/backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - hosts:
        - lt.eurac.edu
      secretName: lt-prd-tls
